--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
     <li><a href="gs">GET STARTED</a></li>
    </ul>
    </nav>
+   <img class="biko" src="image 1.png" alt="">
     
     <div class="mmh">
     <p>Easy and fast way to own a car.</p>
@@ -40,18 +41,19 @@
             <li>Mercedes benz E</li>
         </ol>
     </div>
-    <div class=" two">
+    <div row>
+        <table>
     <img src="Rectangle 4.png" alt="">
     <img src="Rectangle 5.png" alt="">
     <img src="Rectangle 6.png" alt="">
     <img src="Rectangle 4-1.png" alt="">
     <img src="Rectangle 5-1.png" alt="">
     <img src="Rectangle 6-1.png" alt="">
-
+        </table>
 </div>
 
     <br>
-    <div>
+    <div class="three">
         <h2>Happy Clients</h2>
         <p>ower goal is to meet your desires of owning <br>
         a car</p>
@@ -63,13 +65,13 @@
 
         <img src="image 8.png" alt="">
         <p>Are you looking for a place to buy a car.Visit Rocarstar for the best and long lasting machines , with warrants that is suitable and for affordable prices.Rocarstar also allows one to own cars on loans that are customer frienly</p>
-    </div
+        </div>
 
 
         <br>
-        <div>
+        <div class="four">
             <img src="car-rental 1.png" alt="">
-            <h3>download the free <br>
+            <h3 class="bio header">download the free <br>
             Rocarstar App</h3>
             <p>For faster, Easierbooking and exclusive deals</p>
             <img src="App store.png" alt="">
@@ -77,7 +79,7 @@
         </div>
 
         <br>
-        <div>
+        <div class="five">
             <h3>About Rocarstar</h3>
             <p>Rocarstar started in 1974.Just like the other companies its was a small developing company.In 2000 the company started growing and there were many investors.By the power of God now the company is among the best car dealers internationally</p>
             <p>We try all our best to reach our customers services and meet their satisfaction</p>
@@ -85,7 +87,7 @@
         </div>
 
         <br>
-        <div>
+        <div >
             <h3>our service</h3>
             <ul>
                 <li>Car Rentals</li>
