--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
         <h1>Rocarstor</h1>
         <ul class="list1">
             <li><a href="#home">Home</a></li>
-            <li><a href="#about">About</a></li>
+            <li><a href="#abouts">About</a></li>
             <li><a href="#services">Services</a></li>
         </ul>
         <ul class="list2">
@@ -31,11 +31,11 @@
         <section id="two">
             <h1>Top Rated Cars</h1>
             <ul>
-                <li><button class="buko">Mercedes</button></a></li>
-                <li><button class="buko">Audi</button></a></li>
-                <li><button class="buko">Honda</button></a></li>
-                <li><button class="buko">Toyota</button></a></li>
-                <li><button class="buko">Mazda</button></a></li>
+                <li><button class="ludo">Mercedes</button></a></li>
+                <li><button class="ludo">Audi</button></a></li>
+                <li><button class="ludo">Honda</button></a></li>
+                <li><button class="ludo">Toyota</button></a></li>
+                <li><button class="ludo">Mazda</button></a></li>
                 <li><button>Explore 10+</button></li>
 
             </ul>
