--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                     </ul>
                 </li>
                 
-                <li class="resources"><h1>Resources</h1>
+                <li class="Resources"><h1>Resources</h1>
                     <ul>
                         <li>Downloads</li>
                         <li>Help Center</li>
