--- a/index.html
+++ b/index.html
@@ -129,7 +129,7 @@
      </div> 
      <div class="download">
         <div class="first">
-            <div class="txt">
+            <div class="text">
                 <h1>
                     Download the free Rockaster App
                 </h2>
